force-app/main/default/objects/IT_Known_Issue__mdt/IT_Known_Issue__mdt.object-meta.xml
<CustomObject>
    <description>Campus IT self-service articles the triage backend tries before escalating a Case. Edit in Setup without a code deploy.</description>
    <label>IT Known Issue</label>
    <pluralLabel>IT Known Issues</pluralLabel>
</CustomObject>