force-app/main/default/objects/IT_Known_Issue__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Optional category used to boost ranking when the agent also supplies a category (Network, Hardware, Software, Account).</description>
    <label>Category</label>
    <length>40</length>
    <type>Text</type>
</CustomField>