force-app/main/default/objects/IT_Known_Issue__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Inactive articles are ignored by the self-service action.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>