force-app/main/default/objects/IT_Known_Issue__mdt/fields/Keywords__c.field-meta.xml
<CustomField>
    <fullName>Keywords__c</fullName>
    <description>Comma-separated keywords matched against the student issue description.</description>
    <label>Keywords</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>