force-app/main/default/objects/IT_Known_Issue__mdt/fields/Requires_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Requires_Escalation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, share first-aid steps and then escalate. Use for issues a student cannot finish alone.</description>
    <label>Requires Escalation</label>
    <type>Checkbox</type>
</CustomField>