force-app/main/default/objects/IT_Known_Issue__mdt/fields/Resolution_Steps__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Steps__c</fullName>
    <description>Student-facing troubleshooting steps the agent should walk through before escalating.</description>
    <label>Resolution Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>