force-app/main/default/objects/IT_Known_Issue__mdt/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Short article title to read back to the student.</description>
    <label>Title</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>